[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdm-book"
version = "1.0.0"
description = "Finite Difference Computing with PDEs - A Modern Software Approach"
readme = "README.md"
license = {text = "CC BY-NC 4.0"}
authors = [
    {name = "Hans Petter Langtangen"},
    {name = "Svein Linge"},
]
maintainers = [
    {name = "Gerard Gorman", email = "g.gorman@imperial.ac.uk"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["finite difference", "PDE", "numerical methods", "scientific computing"]

dependencies = [
    "doconce>=1.5.15",
    "publish-doconce>=1.1.4",
    "preprocess>=2.0.0",
    "mako>=1.3.0",
    "pygments>=2.17.0",
    "pygments-doconce>=1.0.2",
    "regex>=2023.0.0",
    "future>=1.0.0",
    "requests>=2.31.0",
    "nbformat>=5.9.0",
    "jupyter-client>=8.0.0",
    "lxml>=5.0.0",
    "sphinx>=7.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.14.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-pyproject>=1.2.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/devitocodes/devito_book"
Documentation = "https://hplgit.github.io/fdm-book/doc/web/"
Repository = "https://github.com/devitocodes/devito_book"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.do.txt", "*.dict4spell.txt"]

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
# Add the following rule sets
select = ["E", "W", "F", "B", "UP", "SIM", "RUF022"]
# But ignore these inconvenient rules
ignore = [
    "F403",   # from module import *
    "E226",   # missing whitespace around arithmetic operator
    "E731",   # lambda expressions
    "E275",   # missing whitespace after keyword
    "F405",   # name may be undefined from star import
    "E722",   # bare except
    "E741",   # ambiguous variable name (I, l, O)
    "E743",   # ambiguous function name (I, l, O) - common in math code
    "W605",   # invalid escape sequence
    "E402",   # module level import not at top of file - common in examples
    "E702",   # multiple statements on one line (semicolon) - compact examples
    "E701",   # multiple statements on one line (colon)
    "B007",   # loop control variable not used
    "B023",   # function uses loop variable - common pattern in closures
    "B905",   # zip without strict - Python 3.9 compatibility
    "F841",   # local variable assigned but never used - often for documentation
    "F821",   # undefined name - from star imports (numpy)
    "F811",   # redefinition of unused name - common in examples
    "B018",   # useless expression - often for demonstration
    "B006",   # mutable default argument - common in simple examples
    "B008",   # function call in default argument - common pattern
    "E501",   # line too long - allow long lines for math formulas and docstrings
    "UP031",  # use format specifiers - %-formatting is fine for educational code
    "UP036",  # version block outdated - legacy compatibility code
    "SIM",    # simplify rules - explicit code often clearer for educational purposes
    "E401",   # multiple imports on one line - common in compact examples
]

[tool.isort]
profile = "black"
line_length = 90
py_version = 310
skip = ["__init__.py"]
skip_gitignore = true

[tool.typos]
# For identifiers: Ignore words 2 characters or fewer followed by zero or more digits
# Also ignore collections of 20 or more "word character"s
default.extend-ignore-identifiers-re = ["\\b[[:alpha:]]{1,2}\\d*\\b", "\\b\\w{20,}\\b"]
# For words: Ignore words 2 characters or fewer followed by one or more digits
default.extend-ignore-words-re = ["\\b[[:alpha:]]{1,2}\\d?\\b", "\\b\\w{20,}\\b"]

[tool.typos.default.extend-words]
# numer - common abbreviation of numerator
numer = "numer"

[tool.flake8]
max-line-length = 90
ignore = [
  "F403","E226","E731","E275",
  "W503","F405","E722","E741",
  "W504","W605"
]
